scc/tests/cc/error/0020-storage.c
int a;
static char b;
extern int c;
typedef unsigned e;

int
func1(void)
{
        auto h;
        static char i;
        register long j;
        extern int k;
        static unsigned long a;
        return 0;
}

void
func2(register int par)
{
        int par;
}

static void
func3(register int par)
{
}

register short d;

register void
func4(static int par)
{
        static register f;
}

short d;
char d;
